[project]
name = "textual-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "py-sudoku>=2.0.0",
    "textual-pyfiglet>=0.5.5",
    "textual>=1.0.0",
]

[project.scripts]
textual-games = "textual_games:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
